# fusiondirectory-api

./: .gitignore  README.md  requirements-dev.txt  setup.cfg  setup.py  tests.py
.github/workflows/: publish-to-pypi.yml
fusiondirectory_api/: __init__.py  fusiondirectory_api.py
