[metadata]
name = fusiondirectory-api
version = 0.0.3
author = Tobias Balle-Petersen
author_email = tobiasbp@gmail.com
description = A Python client library for the FusionDirectory API
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
classifiers = 
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
project_urls =
    Bug Reports = https://github.com/tobiasbp/fusiondirectory-api/issues
    Release Notes = https://github.com/tobiasbp/fusiondirectory-api/releases/
    Source = https://github.com/tobiasbp/fusiondirectory-api

[options]
python_requires = >3.8, <4
packages = find:
install_requires =
    requests >= 2.24.0

[flake8]
max-line-length = 88
max-complexity = 10
select = E9,F63,F7,F82
